# github-stats-cards

./: .gitignore  CONTRIBUTING.md  EXAMPLES.md  GEMINI.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  action.yml  pyproject.toml  refactor_fetchers.py  verify_installation.py
.gemini/commands/: speckit.archive.run.toml  speckit.constitution.toml  speckit.reconcile.run.toml  speckit.specify.toml
.github/: copilot-instructions.md
.github/prompts/: speckit.reconcile.run.prompt.md
.github/workflows/: update-stats.yml
.specify/extensions/: .registry
.specify/memory/: changelog.md  constitution.md  plan.md  spec.md
.specify/scripts/bash/: update-agent-context.sh
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
specs/001-contributor-card/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-contributor-card/checklists/: requirements.md
specs/002-rework-ranking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rework-ranking/checklists/: requirements.md
specs/003-filter-contrib-types/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-filter-contrib-types/checklists/: requirements.md
src/: __init__.py  __main__.py  card.py  cli.py  colors.py  config.py  constants.py  exceptions.py  fetcher.py  i18n.py  icons.py  langs_card.py  langs_fetcher.py  rank.py  stats_card.py  themes.py  utils.py
src/core/: config.py  constants.py  exceptions.py  i18n.py  utils.py
src/github/: client.py  fetcher.py  langs_fetcher.py  rank.py
src/rendering/: base.py  colors.py  contrib.py  langs.py  stats.py  themes.py  user_stats.py
tests/: test_cli.py  test_colors.py  test_contrib_card.py  test_contrib_edge_cases.py  test_contrib_rendering.py  test_env_api_urls.py  test_fetcher.py  test_github_client.py  test_langs_card.py  test_langs_fetcher.py  test_rank.py  test_stats_card.py  test_user_stats_card.py  test_user_stats_fetcher.py  test_utils.py
